--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node node_modules/may-it-serve/serve.js",
+    "update": "ncu -u && npm install"
+  },
+  "devDependencies": {
+    "may-it-serve": "0.0.6"
   },
   "repository": {
     "type": "git",
